logs/immunio.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/.libs_cffi_backend'...
Listing './lib/python3.5/site-packages/cffi'...
Listing './lib/python3.5/site-packages/cffi-1.11.3.dist-info'...
Listing './lib/python3.5/site-packages/immunio'...
Listing './lib/python3.5/site-packages/immunio/api'...
Listing './lib/python3.5/site-packages/immunio/deps'...
Listing './lib/python3.5/site-packages/immunio/deps/cachetools'...
Compiling './lib/python3.5/site-packages/immunio/deps/cachetools/backport_collections.py'...
***   File "./lib/python3.5/site-packages/immunio/deps/cachetools/backport_collections.py", line 379
    print class_definition
                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/immunio/deps/libagent'...
Listing './lib/python3.5/site-packages/immunio/deps/portalocker'...
Listing './lib/python3.5/site-packages/immunio/deps/python_ifcfg'...
Listing './lib/python3.5/site-packages/immunio/deps/python_ifcfg/ifcfg'...
Listing './lib/python3.5/site-packages/immunio/deps/python_ifcfg/tests'...
Listing './lib/python3.5/site-packages/immunio/plugins'...
Listing './lib/python3.5/site-packages/immunio-2.1.2.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pycparser'...
Listing './lib/python3.5/site-packages/pycparser/ply'...
Listing './lib/python3.5/site-packages/pycparser-2.18.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
